# CountMeDown-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
countmedown-rs/: Cargo.toml
countmedown-rs/src/: main.rs
src/: main.rs
ui/: appwindow.slint
