[package]
name = "countmedown-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
rfd = "0.12.0"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"