[package]
name = "countmedown-rs"
version = "0.3.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
directories = "5.0.1"
rfd = "0.12.0"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"]}
slint = "1.2"

[build-dependencies]
slint-build = "1.0"
